objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_holder_Mobile_Number__c</fullName>
        <label>Account holder Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Acoount_Number__c</fullName>
        <label>Acoount Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Back_In_Which_Sem__c</fullName>
        <label>Back In Which Sem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_In_Which_Subject__c</fullName>
        <label>Back In Which Subject</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C and Data Structure</fullName>
                </value>
                <value>
                    <fullName>Network Theory</fullName>
                </value>
                <value>
                    <fullName>Computer Programming</fullName>
                </value>
                <value>
                    <fullName>Data processing and File Organization</fullName>
                </value>
                <value>
                    <fullName>Linear and Digital ICS Application</fullName>
                </value>
                <value>
                    <fullName>Switching Theory and Logical Design</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
                <value>
                    <fullName>Interfacing Through Microprocessors</fullName>
                </value>
                <value>
                    <fullName>Theory of Computation</fullName>
                </value>
                <value>
                    <fullName>Principles of Programming Languages</fullName>
                </value>
                <value>
                    <fullName>System Programming</fullName>
                </value>
                <value>
                    <fullName>Operation Research</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submit__c</fullName>
        <label>Exam Fees Submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <label>Fees Submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donetion__c</fullName>
        <label>Is Donetion?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overal_Grade__c</fullName>
        <label>Overal Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Gender__c</fullName>
        <label>Student Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Linkedin_Id__c</fullName>
        <label>Student Linkedin Id</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Percentage__c</fullName>
        <label>3rd Sem Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>